--- a/css/style.css
+++ b/css/style.css
@@ -236,37 +236,39 @@
 .footer {
   margin: 20px 0 0 0;
   width: 100%;
-  background-color: #f6e9ce; }
+  background-color: #f6e9ce;
+  height: 500px;
+  padding: 20px; }
   .footer .grupo {
     width: 100%;
     max-width: 1800px;
-    max-height: 380px;
+    max-height: 500px;
     margin: auto;
     display: grid;
-    grid-template-columns: repeat(7, 1fr);
-    grid-template-rows: 1fr 1fr;
-    grid-template-areas: "box-1 box-2 box-3 box-4 box-5 box-6 box-7" "box-1 box-2 box-3 box-4 box-5 box-6 box-8";
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-areas: "box-1 box-2 box-3 box-4 box-5 box-6" "box-1 box-2 box-3 box-4 box-5 box-7" "box-8 box-8 box-8 box-8 box-8 box-8";
     padding: 45px 0; }
     .footer .grupo .box-1 {
-      grid-area: box-1; }
-      .footer .grupo .box-1 figure {
-        width: 100%;
-        height: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center; }
-        .footer .grupo .box-1 figure img {
-          width: 120px; }
+      grid-area: box-1;
+      display: flex;
+      flex-direction: column;
+      flex-wrap: wrap;
+      padding: 0 10px; }
+      .footer .grupo .box-1 h2 {
+        color: #323E48;
+        margin-bottom: 10px;
+        font-size: 21px; }
+      .footer .grupo .box-1 a {
+        color: #323E48;
+        font-size: 16px;
+        text-decoration: none; }
     .footer .grupo .box-2 {
       grid-area: box-2;
       display: flex;
       flex-direction: column;
       flex-wrap: wrap;
       padding: 0 10px; }
-      .footer .grupo .box-2 h2 {
-        color: #323E48;
-        margin-bottom: 10px;
-        font-size: 21px; }
       .footer .grupo .box-2 a {
         color: #323E48;
         font-size: 16px;
@@ -306,44 +308,43 @@
       display: flex;
       flex-direction: column;
       flex-wrap: wrap;
-      padding: 0 10px; }
-      .footer .grupo .box-6 a {
+      margin: 0 30px 0 10px; }
+      .footer .grupo .box-6 h3 {
+        color: #323E48;
+        margin-bottom: 10px;
+        font-size: 21px; }
+      .footer .grupo .box-6 p {
         color: #323E48;
         font-size: 16px;
         text-decoration: none; }
     .footer .grupo .box-7 {
       grid-area: box-7;
       display: flex;
-      flex-direction: column;
-      flex-wrap: wrap;
-      margin: 0 30px 0 10px; }
-      .footer .grupo .box-7 h3 {
-        color: #323E48;
-        margin-bottom: 10px;
-        font-size: 21px; }
-      .footer .grupo .box-7 p {
-        color: #323E48;
-        font-size: 16px;
-        text-decoration: none; }
-    .footer .grupo .box-8 {
-      grid-area: box-8;
-      display: flex;
       justify-content: center;
       align-items: center; }
-      .footer .grupo .box-8 .red-social a {
+      .footer .grupo .box-7 .red-social a {
         background-color: #f6e9ce;
         padding: 10px;
         font-size: 25px; }
+    .footer .grupo .box-8 {
+      grid-area: box-8;
+      display: flex;
+      justify-content: center; }
+      .footer .grupo .box-8 a {
+        color: #F5A800;
+        font-size: 21px;
+        text-decoration: none;
+        padding: 15px; }
 
 @media (max-width: 1265px) {
   .footer {
     background-color: #f6e9ce;
-    height: 500px; }
+    height: 530px; }
     .footer .grupo {
       width: 100%;
       grid-template-columns: repeat(6, 1fr);
-      grid-template-rows: 1fr 1fr;
-      grid-template-areas: "box-1 box-2 box-3 box-4 box-5 box-6" "box-1 box-7 box-7 box-7 box-7 box-8";
+      grid-template-rows: 1fr 1fr 1fr;
+      grid-template-areas: "box-1 box-2 box-3 box-4 box-5 box-6" "box-7 box-7 box-7 box-7 box-7 box-7" "box-8 box-8 box-8 box-8 box-8 box-8";
       padding: 45px 0; }
       .footer .grupo .box-7 {
         padding: 15px;
@@ -353,41 +354,40 @@
 @media (max-width: 1240px) {
   .footer {
     background-color: #f6e9ce;
-    height: 510px; }
+    height: 580px; }
     .footer .grupo {
       width: 100%;
-      grid-template-columns: repeat(6, 1fr);
-      grid-template-rows: 1fr 1fr;
-      grid-template-areas: "box-1 box-2 box-3 box-4 box-5 box-6" "box-1 box-7 box-7 box-7 box-7 box-8";
-      padding: 45px 0; } }
+      grid-template-columns: repeat(5, 1fr);
+      grid-template-rows: 1fr 1fr 1fr;
+      grid-template-areas: "box-1 box-2 box-3 box-4 box-5" "box-6 box-6 box-6 box-7 box-7" "box-8 box-8 box-8 box-8 box-8";
+      padding: 45px 0; }
+      .footer .grupo .box-6 {
+        padding: 20px 0; } }
 
 @media (max-width: 940px) {
   .footer {
     background-color: #f6e9ce;
-    height: 650px;
+    height: 600px;
     padding: 0 10px 0 20px; }
     .footer .grupo {
       width: 100%;
       grid-template-columns: repeat(5, 1fr);
       grid-template-rows: 3fr 1fr;
-      grid-template-areas: "box-2 box-3 box-4 box-5 box-6" "box-1 box-7 box-7 box-7 box-8";
-      padding: 45px 0; }
-      .footer .grupo .box-7 {
-        align-content: center;
-        padding: 20px; } }
+      grid-template-areas: "box-1 box-2 box-3 box-4 box-5" "box-6 box-6 box-6 box-7 box-7" "box-8 box-8 box-8 box-8 box-8";
+      padding: 45px 0; } }
 
-@media (max-width: 621px) {
+@media (max-width: 769px) {
   .footer {
     background-color: #f6e9ce;
-    height: 1800px; }
+    height: 1650px; }
     .footer .grupo {
       width: 100%;
       grid-template-columns: 1fr;
       grid-template-rows: 8fr;
-      grid-template-areas: "box-2" "box-3" "box-4" "box-5" "box-6" "box-1" "box-7" "box-8";
+      grid-template-areas: "box-1" "box-2" "box-3" "box-4" "box-5" "box-6" "box-7" "box-8";
       padding: 45px 0; }
       .footer .grupo .box-1 {
-        padding: 20px; }
+        align-items: center; }
       .footer .grupo .box-2 {
         align-items: center; }
       .footer .grupo .box-3 {
@@ -397,7 +397,5 @@
       .footer .grupo .box-5 {
         align-items: center; }
       .footer .grupo .box-6 {
-        align-items: center; }
-      .footer .grupo .box-7 {
         align-content: center;
         padding: 20px; } }
