--- a/scss/secciones/_footer.scss
+++ b/scss/secciones/_footer.scss
@@ -2,38 +2,26 @@
     margin: 20px 0 0 0;
     width: 100%;
     background-color: $naranja-massuave;
+    height: 500px;
+    padding: 20px;
 
     .grupo {
         width: 100%;
         max-width: 1800px;
-        max-height: 380px;
+        max-height: 500px;
         margin: auto;
         display: grid;
-        grid-template-columns: repeat(7, 1fr);
-        grid-template-rows: 1fr 1fr;
+        grid-template-columns: repeat(6, 1fr);
+        grid-template-rows: 1fr 1fr 1fr;
         grid-template-areas:
-            "box-1 box-2 box-3 box-4 box-5 box-6 box-7"
-            "box-1 box-2 box-3 box-4 box-5 box-6 box-8";
+            "box-1 box-2 box-3 box-4 box-5 box-6"
+            "box-1 box-2 box-3 box-4 box-5 box-7"
+            "box-8 box-8 box-8 box-8 box-8 box-8";
         padding: 45px 0;
+
 
         .box-1 {
             grid-area: box-1;
-
-            figure {
-                width: 100%;
-                height: 100%;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-
-                img {
-                    width: 120px;
-                }
-            }
-        }
-
-        .box-2 {
-            grid-area: box-2;
             display: flex;
             flex-direction: column;
             flex-wrap: wrap;
@@ -44,6 +32,20 @@
                 margin-bottom: 10px;
                 font-size: $h3;
             }
+
+            a {
+                color: $gris-azulado;
+                font-size: $texto-footer;
+                text-decoration: none;
+            }
+        }
+
+        .box-2 {
+            grid-area: box-2;
+            display: flex;
+            flex-direction: column;
+            flex-wrap: wrap;
+            padding: 0 10px;
 
             a {
                 color: $gris-azulado;
@@ -99,20 +101,6 @@
             display: flex;
             flex-direction: column;
             flex-wrap: wrap;
-            padding: 0 10px;
-
-            a {
-                color: $gris-azulado;
-                font-size: $texto-footer;
-                text-decoration: none;
-            }
-        }
-
-        .box-7 {
-            grid-area: box-7;
-            display: flex;
-            flex-direction: column;
-            flex-wrap: wrap;
             margin: 0 30px 0 10px;
 
             h3 {
@@ -129,8 +117,8 @@
 
         }
 
-        .box-8 {
-            grid-area: box-8;
+        .box-7 {
+            grid-area: box-7;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -142,6 +130,20 @@
                     font-size: 25px;
                 }
             }
+
+        }
+
+        .box-8 {
+            grid-area: box-8;
+            display: flex;
+            justify-content: center;
+
+            a {
+                color: $naranja;
+                font-size: $h3;
+                text-decoration: none;
+                padding: 15px;
+            }
         }
 
     }
@@ -150,15 +152,16 @@
 @media(max-width: 1265px) {
     .footer {
         background-color: $naranja-massuave;
-        height: 500px;
+        height: 530px;
 
         .grupo {
             width: 100%;
             grid-template-columns: repeat(6, 1fr);
-            grid-template-rows: 1fr 1fr;
+            grid-template-rows: 1fr 1fr 1fr;
             grid-template-areas:
                 "box-1 box-2 box-3 box-4 box-5 box-6"
-                "box-1 box-7 box-7 box-7 box-7 box-8";
+                "box-7 box-7 box-7 box-7 box-7 box-7"
+                "box-8 box-8 box-8 box-8 box-8 box-8";
             padding: 45px 0;
 
             .box-7 {
@@ -173,16 +176,21 @@
 @media(max-width: 1240px) {
     .footer {
         background-color: $naranja-massuave;
-        height: 510px;
+        height: 580px;
 
         .grupo {
             width: 100%;
-            grid-template-columns: repeat(6, 1fr);
-            grid-template-rows: 1fr 1fr;
+            grid-template-columns: repeat(5, 1fr);
+            grid-template-rows: 1fr 1fr 1fr;
             grid-template-areas:
-                "box-1 box-2 box-3 box-4 box-5 box-6"
-                "box-1 box-7 box-7 box-7 box-7 box-8";
+                "box-1 box-2 box-3 box-4 box-5"
+                "box-6 box-6 box-6 box-7 box-7"
+                "box-8 box-8 box-8 box-8 box-8";
             padding: 45px 0;
+
+            .box-6 {
+                padding: 20px 0;
+            }
         }
     }
 }
@@ -190,7 +198,7 @@
 @media(max-width: 940px) {
     .footer {
         background-color: $naranja-massuave;
-        height: 650px;
+        height: 600px;
         padding: 0 10px 0 20px;
 
         .grupo {
@@ -198,63 +206,55 @@
             grid-template-columns: repeat(5, 1fr);
             grid-template-rows: 3fr 1fr;
             grid-template-areas:
-                "box-2 box-3 box-4 box-5 box-6"
-                "box-1 box-7 box-7 box-7 box-8";
+                "box-1 box-2 box-3 box-4 box-5"
+                "box-6 box-6 box-6 box-7 box-7"
+                "box-8 box-8 box-8 box-8 box-8";
             padding: 45px 0;
-
-            .box-7 {
-                align-content: center;
-                padding: 20px;
-            }
         }
     }
 }
 
-@media(max-width: 621px) {
+@media(max-width: 769px) {
     .footer {
         background-color: $naranja-massuave;
-        height: 1800px;
+        height: 1650px;
 
         .grupo {
             width: 100%;
             grid-template-columns: 1fr;
             grid-template-rows: 8fr;
             grid-template-areas:
+                "box-1"
                 "box-2"
                 "box-3"
                 "box-4"
                 "box-5"
                 "box-6"
-                "box-1"
                 "box-7"
                 "box-8";
             padding: 45px 0;
 
             .box-1 {
-                padding: 20px;
+                align-items: center;
             }
 
             .box-2 {
-                align-items: center
+                align-items: center;
             }
 
             .box-3 {
-                align-items: center
+                align-items: center;
             }
 
             .box-4 {
-                align-items: center
+                align-items: center;
             }
 
             .box-5 {
-                align-items: center
+                align-items: center;
             }
 
             .box-6 {
-                align-items: center
-            }
-
-            .box-7 {
                 align-content: center;
                 padding: 20px;
             }
